added all origins